[project]
name = "sds-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.30.1",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
